App is fully done

--- a/src/components/CartModal/style.module.scss
+++ b/src/components/CartModal/style.module.scss
@@ -28,4 +28,12 @@
       color: #000;
     }
   }
+
+  .empty {
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 150%;
+    color: #000;
+    align-self: center;
+  }
 }
