--- a/src/components/Vegetable/style.module.scss
+++ b/src/components/Vegetable/style.module.scss
@@ -5,6 +5,11 @@
   background-color: #fff;
   border-radius: 24px;
 
+  &:hover {
+    box-shadow: 0 2px 8px 0 rgba(33, 37, 41, 0.08),
+      0 1px 2px 0 rgba(33, 37, 41, 0.1);
+  }
+
   .info {
     display: flex;
     align-items: center;
