--- a/src/modules/VegetablesHeader/style.module.scss
+++ b/src/modules/VegetablesHeader/style.module.scss
@@ -16,7 +16,22 @@
     color: #fff;
     width: 144px;
     height: 44px;
-    padding: 10px 40px;
+    padding: 10px 20px;
+  }
+
+  .count {
+    display: flex;
+    background-color: #fff;
+    border-radius: 36px;
+    padding: 3px 9px;
+    width: 20px;
+    height: 20px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 143%;
+    color: #212529;
+    justify-content: center;
+    align-items: center;
   }
 }
 
