--- a/src/modules/VegetablesList/style.module.scss
+++ b/src/modules/VegetablesList/style.module.scss
@@ -15,5 +15,31 @@
     display: flex;
     gap: 24px;
     flex-wrap: wrap;
+
+    .loader {
+      width: 302px;
+      height: 424px;
+      padding: 16px;
+      background-color: #fff;
+      border-radius: 24px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      &:hover {
+        box-shadow: 0 2px 8px 0 rgba(33, 37, 41, 0.08),
+          0 1px 2px 0 rgba(33, 37, 41, 0.1);
+      }
+
+      .icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 8px;
+        width: 276px;
+        height: 276px;
+        background-color: #f3f5fa;
+      }
+    }
   }
 }
